--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,23 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
+  // "paths": {
+  //   "jszip": [
+  //     "node_modules/jszip/dist/jszip.min.js"
+  //   ],
+  //   "globalize": [
+  //     "node_modules/globalize/dist/globalize"
+  //   ],
+  //   "globalize/*": [
+  //     "node_modules/globalize/dist/globalize/*"
+  //   ],
+  //   "cldr": [
+  //     "node_modules/cldrjs/dist/cldr"
+  //   ],
+  //   "cldr/*": [
+  //     "node_modules/cldrjs/dist/cldr/*"
+  //   ]
+  // },
   "files": [
     "src/main.ts"
   ],
