--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,24 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "strictPropertyInitialization": false,
+    "paths": {
+      "globalize": [
+        "./node_modules/globalize/dist/globalize"
+      ],
+      "globalize/*": [
+        "./node_modules/globalize/dist/globalize/*"
+      ],
+      "cldr": [
+        "./node_modules/cldrjs/dist/cldr"
+      ],
+      "cldr/*": [
+        "./node_modules/cldrjs/dist/cldr/*"
+      ]
+    },
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
